--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
               <a href="./Login/login.html">
                      <h4>Login</h4>
               </a>
+              <a href="./Register/register.html">
+                     <h4>Register</h4>
+              </a>
        </div>
 </body>
 </html>
