link login to register

--- a/Login/login.html
+++ b/Login/login.html
@@ -32,9 +32,11 @@
             <div id="show-pass-box">
                 <input onclick="password_visibility()" type="checkbox"  id="show-pass">
                 <p id="show-pass-text">نمایش رمز عبور</p>
-         </div>
-         <input type="submit"  id="submit" value="بررسی">
-         <p id="register-text">ثبت نام</p>
+            </div>
+            <input type="submit"  id="submit" value="بررسی">
+            <a href="../Register/register.html">
+                <p id="register-text">ثبت نام</p>
+            </a>
         </form>
     </div>
         
@@ -47,6 +49,7 @@
                   x.type = "password";
                 }
               }
+              
         </script>
         <script src="background.js"></script>
     </body>
